[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-pipeline"
version = "0.1.0"
description = "Steam data CLI for DuckDB."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "duckdb>=0.10",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.scripts]
steam-pipeline = "steam_pipeline.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
